--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="site-header">
   <!-- Developer: Branding area with logo and site title -->
   <div class="container branding">
-    <img src="images/logo.svg" alt="Desiree Braxton logo" width="64" height="64">
+    <img src="images/logo.svg" alt="Site Logo" width="64" height="64">
     <h1 id="site-title">Desiree Braxton Portfolio</h1>
   </div>
 </header>
