--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
   <header class="site-header">
   <!-- Developer: Branding area with logo and site title -->
   <div class="container branding">
-    <img src="images/logo.svg" alt="Desiree Braxton logo" width="64" height="64">
+    <img src="images/logo.svg" alt="Site Logo" width="64" height="64">
     <h1 id="site-title">Desiree Braxton Portfolio</h1>
   </div>
 </header>
@@ -38,11 +38,11 @@
       <header><h2>Gallery</h2></header>
       <p class="lead">A quick look at visuals related to my learning journey. I’ll expand this page with project screenshots and diagrams in future assessments.</p>
       <figure class="figure">
-        <img src="images/gallery1.jpg" alt="Abstract placeholder image labeled Gallery Image 1">
+        <img src="images/gallery1.jpg" alt="Gallery Image 1">
         <figcaption>Gallery Image 1 — placeholder for a future project screenshot.</figcaption>
       </figure>
       <figure class="figure">
-        <img src="images/gallery2.jpg" alt="Abstract placeholder image labeled Gallery Image 2">
+        <img src="images/gallery2.jpg" alt="Gallery Image 2">
         <figcaption>Gallery Image 2 — another placeholder that will be replaced later.</figcaption>
       </figure>
     </article>
