--- a/gallery.html
+++ b/gallery.html
@@ -1,59 +1,51 @@
-<!--
-  Name: Desiree Braxton
-  Date: 2025-08-17
-  File: gallery.html
-  Description: Simple gallery page with a couple of images.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Gallery — Desiree Braxton</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
+    <!--
+    Name: Your Name
+    Date: 08/17/2025
+    File: gallery.html
+    Description: Gallery page showing images for my portfolio.
+    -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio - Gallery</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <header class="site-header">
-  <!-- Developer: Branding area with logo and site title -->
-  <div class="container branding">
-    <img src="images/logo.svg" alt="Site Logo" width="64" height="64">
-    <h1 id="site-title">Desiree Braxton Portfolio</h1>
-  </div>
-</header>
-<nav class="site-nav" aria-label="Primary">
-  <!-- Developer: Styled unordered list provides main navigation links -->
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="interests.html">Interests</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
 
-  <main class="container" role="main">
-    <article class="content">
-      <header><h2>Gallery</h2></header>
-      <p class="lead">A quick look at visuals related to my learning journey. I’ll expand this page with project screenshots and diagrams in future assessments.</p>
-      <figure class="figure">
-        <img src="images/gallery1.jpg" alt="Gallery Image 1">
-        <figcaption>Gallery Image 1 — placeholder for a future project screenshot.</figcaption>
-      </figure>
-      <figure class="figure">
-        <img src="images/gallery2.jpg" alt="Gallery Image 2">
-        <figcaption>Gallery Image 2 — another placeholder that will be replaced later.</figcaption>
-      </figure>
-    </article>
-  </main>
-  <footer class="site-footer">
-  <!-- Developer: Secondary footer content -->
-  <div class="container inner">
-    <p>&copy; 2025 Desiree Braxton. All rights reserved.</p>
-    <p class="muted">Built with semantic HTML5 and a shared external CSS stylesheet.</p>
-  </div>
-</footer>
+    <!-- Header -->
+    <header>
+        <img src="images/logo.png" alt="Site Logo" id="logo">
+        <h1>My Portfolio</h1>
+    </header>
+
+    <!-- Navigation -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="interests.html">Interests</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <main>
+        <section>
+            <h2>Gallery</h2>
+            <div class="gallery">
+                <img src="images/gallery1.jpg" alt="Gallery Image 1">
+                <img src="images/gallery2.jpg" alt="Gallery Image 2">
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 My Name. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
