--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header>
         <!-- Site Logo -->
-        <img src="images/logo.png" alt="Site Logo" id="logo">
+        <img src="images/logo.svg" alt="logo" id="logo">
         <h1>My Portfolio</h1>
     </header>
 
