--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
+<!--
+  Name: Desiree Braxton
+  Date: 2025-08-17
+  File: index.html
+  Description: Homepage introducing myself and linking to the site's main sections.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--
-    Name: Your Name
-    Date: 08/17/2025
-    File: index.html
-    Description: Homepage for my portfolio site with header, nav, content, and footer.
-    -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio - Home</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Home — Desiree Braxton</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
+  <header class="site-header">
+  <!-- Developer: Branding area with logo and site title -->
+  <div class="container branding">
+    <img src="images/logo.svg" alt="Desiree Braxton logo" width="64" height="64">
+    <h1 id="site-title">Desiree Braxton Portfolio</h1>
+  </div>
+</header>
+<nav class="site-nav" aria-label="Primary">
+  <!-- Developer: Styled unordered list provides main navigation links -->
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="interests.html">Interests</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
-    <!-- Header -->
-    <header>
-        <!-- Site Logo -->
-        <img src="images/logo.svg" alt="logo" id="logo">
-        <h1>My Portfolio</h1>
-    </header>
-
-    <!-- Navigation -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="interests.html">Interests</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Main Content -->
-    <main>
-        <article>
-            <h2>Welcome to My Portfolio</h2>
-            <p>Hello! I am [Your Name], and this is my personal portfolio website. Here you can find information about me, my interests, projects, and contact details. This homepage gives a brief introduction and links to the other pages on the site.</p>
-        </article>
-    </main>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 My Name. All rights reserved.</p>
-    </footer>
+  <main class="container" role="main">
+    <!-- Developer: Main content area is unique per page -->
+    <article class="content">
+      <header>
+        <h2>Welcome</h2>
+      </header>
+      <p class="lead">Hi, I’m Desiree Braxton. I’m building this portfolio to document my growth in technology and to share projects that reflect my problem‑solving style and curiosity.</p>
+      <p>I enjoy translating real‑world problems into simple, usable solutions. You’ll find a mix of coursework, hands‑on experiments, and small utilities that helped me learn the fundamentals.</p>
+      <p>Feel free to browse the site, check out the gallery, and reach out through the contact page if you’d like to connect.</p>
+    </article>
+  </main>
+  <footer class="site-footer">
+  <!-- Developer: Secondary footer content -->
+  <div class="container inner">
+    <p>&copy; 2025 Desiree Braxton. All rights reserved.</p>
+    <p class="muted">Built with semantic HTML5 and a shared external CSS stylesheet.</p>
+  </div>
+</footer>
 
 </body>
 </html>
