--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+  Name: Desiree Braxton
+  Date: 2025-08-17
+  File: index.html
+  Description: Homepage introducing myself and linking to the site's main sections.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,23 +16,22 @@
 
 <body>
   <header class="site-header">
-    <!-- Developer: Branding area with logo and site title -->
-    <div class="container branding">
-      <img src="https://desireebraxton.github.io/portfolio-site/images/logo.svg" alt="Desiree Braxton logo" width="64" height="64">
-      <h1 id="site-title">Desiree Braxton Portfolio</h1>
-    </div>
-  </header>
-
-  <nav class="site-nav" aria-label="Primary">
-    <!-- Developer: Styled unordered list provides main navigation links -->
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="interests.html">Interests</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <!-- Developer: Branding area with logo and site title -->
+  <div class="container branding">
+    <img src="images/logo.svg" alt="Desiree Braxton logo" width="64" height="64">
+    <h1 id="site-title">Desiree Braxton Portfolio</h1>
+  </div>
+</header>
+<nav class="site-nav" aria-label="Primary">
+  <!-- Developer: Styled unordered list provides main navigation links -->
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="interests.html">Interests</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
   <main class="container" role="main">
     <!-- Developer: Main content area is unique per page -->
@@ -39,13 +44,13 @@
       <p>Feel free to browse the site, check out the gallery, and reach out through the contact page if you’d like to connect.</p>
     </article>
   </main>
-
   <footer class="site-footer">
-    <!-- Developer: Secondary footer content -->
-    <div class="container inner">
-      <p>&copy; 2025 Desiree Braxton. All rights reserved.</p>
-      <p class="muted">Built with semantic HTML5 and a shared external CSS stylesheet.</p>
-    </div>
-  </footer>
+  <!-- Developer: Secondary footer content -->
+  <div class="container inner">
+    <p>&copy; 2025 Desiree Braxton. All rights reserved.</p>
+    <p class="muted">Built with semantic HTML5 and a shared external CSS stylesheet.</p>
+  </div>
+</footer>
+
 </body>
 </html>
