--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,9 @@
+<!--
+  Name: Desiree Braxton
+  Date: 2025-08-17
+  File: gallery.html
+  Description: Simple gallery page with a couple of images.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,37 +16,44 @@
 
 <body>
   <header class="site-header">
-    <div class="container branding">
-      <img src="https://desireebraxton.github.io/portfolio-site/images/logo.svg" alt="Desiree Braxton logo" width="64" height="64">
-      <h1 id="site-title">Desiree Braxton Portfolio</h1>
-    </div>
-  </header>
-
-  <nav class="site-nav" aria-label="Primary">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="interests.html">Interests</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <!-- Developer: Branding area with logo and site title -->
+  <div class="container branding">
+    <img src="images/logo.svg" alt="Desiree Braxton logo" width="64" height="64">
+    <h1 id="site-title">Desiree Braxton Portfolio</h1>
+  </div>
+</header>
+<nav class="site-nav" aria-label="Primary">
+  <!-- Developer: Styled unordered list provides main navigation links -->
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="interests.html">Interests</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
   <main class="container" role="main">
-    <section>
-      <h2>Gallery</h2>
-      <div class="gallery">
-        <img src="https://desireebraxton.github.io/portfolio-site/images/gallery1.jpg" alt="Gallery Image 1" width="400">
-        <img src="https://desireebraxton.github.io/portfolio-site/images/gallery2.jpg" alt="Gallery Image 2" width="400">
-      </div>
-    </section>
+    <article class="content">
+      <header><h2>Gallery</h2></header>
+      <p class="lead">A quick look at visuals related to my learning journey. I’ll expand this page with project screenshots and diagrams in future assessments.</p>
+      <figure class="figure">
+        <img src="images/gallery1.jpg" alt="Abstract placeholder image labeled Gallery Image 1">
+        <figcaption>Gallery Image 1 — placeholder for a future project screenshot.</figcaption>
+      </figure>
+      <figure class="figure">
+        <img src="images/gallery2.jpg" alt="Abstract placeholder image labeled Gallery Image 2">
+        <figcaption>Gallery Image 2 — another placeholder that will be replaced later.</figcaption>
+      </figure>
+    </article>
   </main>
-
   <footer class="site-footer">
-    <div class="container inner">
-      <p>&copy; 2025 Desiree Braxton. All rights reserved.</p>
-      <p class="muted">Built with semantic HTML5 and a shared external CSS stylesheet.</p>
-    </div>
-  </footer>
+  <!-- Developer: Secondary footer content -->
+  <div class="container inner">
+    <p>&copy; 2025 Desiree Braxton. All rights reserved.</p>
+    <p class="muted">Built with semantic HTML5 and a shared external CSS stylesheet.</p>
+  </div>
+</footer>
+
 </body>
 </html>
