--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
   <header class="site-header">
   <!-- Developer: Branding area with logo and site title -->
   <div class="container branding">
-    <img src="images/logo.svg" alt="Desiree Braxton logo" width="64" height="64">
+    <img src=https://github.com/desireebraxton6-coder/Portfolio---Site/blob/38ad1f89157be3fe4cc6dfd03af06e8c33deafbc/images/logo.svg" alt="Desiree Braxton logo" width="64" height="64">
     <h1 id="site-title">Desiree Braxton Portfolio</h1>
   </div>
 </header>
