--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
       <header><h2>Gallery</h2></header>
       <p class="lead">A quick look at visuals related to my learning journey. I’ll expand this page with project screenshots and diagrams in future assessments.</p>
       <figure class="figure">
-        <img src="images/gallery1.jpg" alt="Abstract placeholder image labeled Gallery Image 1">
+        <img src="https://github.com/desireebraxton6-coder/Portfolio---Site/blob/50ff4c7df578ae66185b9760104d08bc41d06d12/images/gallery1.jpg" alt="Abstract placeholder image labeled Gallery Image 1">
         <figcaption>Gallery Image 1 — placeholder for a future project screenshot.</figcaption>
       </figure>
       <figure class="figure">
