--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,7 @@
         <figcaption>Gallery Image 1 — placeholder for a future project screenshot.</figcaption>
       </figure>
       <figure class="figure">
-        <img src="images/gallery2.jpg" alt="Abstract placeholder image labeled Gallery Image 2">
+        <img src="https://github.com/desireebraxton6-coder/Portfolio---Site/blob/5867058bbda8559f9d54a0af66ab161640a887ce/images/gallery2.jpg" alt="Abstract placeholder image labeled Gallery Image 2">
         <figcaption>Gallery Image 2 — another placeholder that will be replaced later.</figcaption>
       </figure>
     </article>
